  ^ script loading order after css (for less)
^ template.js.php
  + get less variable
  + if less==1 load less javascript
^ template.css.php
  + get compressor variable
  + get less variable
  + cases if bootstrap is enabled
  + cases if compressor is disabled
  + cases if compressor is enabled
  + cases if less is disabled
  ^ order of css loading; bootstrap files @first
^ reset.css: insert two empty lines at end

-------------------- 1.2.5 [2012-09-22] -------------------
+ jquery-1.8.2.min.js
^ index.php: get variables in url with &amp; instead of &
^ component.php: changing print method
- jquery-1.8.1.min.js

-------------------- 1.2.4 [2012-09-05] -------------------
^ Twitter Bootstrap 2.1.1 files
  ^ bootstrap-responsive.css
  ^ bootstrap.css: inkl. change path to image folder 
  ^ glyphicons-halflings-white.png
  ^ glyphicons-halflings.png
  ^ bootstrap.js
  ^ bootstrap.min.js
+ jquery-1.8.1.min.js
+ modernizr-2.6.2.js
^ template.js.php: implement jQuery 1.8.1
^ index.php: implement Modernizr 2.6.2
- jquery-1.8.0.min.js
- modernizr.js

-------------------- 1.2.3 [2012-09-04] -------------------
^ template.css: delete obsolete body and html attributes
^ templateDetails.xml: change default version to 1.0.0
^ index.php: update get variable in css and js link

-------------------- 1.2.2 [2012-08-22] -------------------
+ bootstrap-responsive.css
+ bootstrap.css
- bootstrap-responsive.min.css
- bootstrap.min.css
^ bootstrap.css: change paths from /img/ to /images/
^ template.css.php: change path to uncompress bootstrap files
  | thx Volker Richardt

-------------------- 1.2.1 [2012-08-14] -------------------
^ Update Twitter Bootstrap
  ^ bootstrap-responsive.min.css
  ^ bootstrap.min.css: update file and path to images
  ^ glyphicons-halflings-white.png
  ^ glyphicons-halflings.png
  ^ bootstrap.js
  ^ bootstrap.min.js
^ Update jQuery from 1.7.2 to 1.8.0
  ^ jquery-1.8.0.min.js
^ component.php: add a / to the link to modernizr.js in line 28